clang/test/CIR/IR/invalid-linkage.cir
// Test that cir.global requires a valid linkage attribute
// RUN: cir-opt %s -verify-diagnostics

// XFAIL: *

!u32i = !cir.int<u, 32>
module {
  // expected-error@+1 {{this is here to prevent the test from being reported as an unexpected pass if the problem is fixed outside of CIR}}
  // expected-error@+1 {{expected string or keyword containing one of the following enum values for attribute 'linkage' [external, available_externally, linkonce, linkonce_odr, weak, weak_odr, appending, internal, cir_private, extern_weak, common]}}
  cir.global @a = #cir.const_array<[0 : !u8i, -23 : !u8i, 33 : !u8i] : !cir.array<!u32i x 3>>
}
